# snippex

./: .gitignore  BUILDING.md  CLAUDE.md  Cargo.toml  Makefile  PHASE1_COMPLETION_PLAN.md  PHASE1_STATUS.md  PHASE4_PLAN.md  PLAN.md  POINTER_REGISTER_FIX_PLAN.md  README.md  ROOT_CAUSE_ANALYSIS.md  TROUBLESHOOTING.md
.cargo/: audit.toml
.claude/: ralph-loop.local.md  settings.json
.github/workflows/: autofix.yml  ci.yml  claude-code-review.yml  claude-dedup-issues.yml  claude.yml  codeql.yml  release.yml  rust-clippy.yml  validate.yml
docker/: Dockerfile.aarch64  Dockerfile.x86_64  README.md  docker-compose.yml
docs/: TUTORIAL.md
scripts/: README.md  analyze-asm.py  annotate_asm_tests.py  docker-build.sh  docker-push.sh  extract_fex_tests.py  install-hooks.sh  measure_success_rate.sh  qa.sh
src/: error.rs  lib.rs  main.rs
src/analyzer/: complexity.rs  mod.rs
src/arch/: dispatcher.rs  flags.rs  mod.rs
src/cli/: analyze.rs  block_range.rs  cache.rs  compare.rs  completions.rs  config.rs  disasm.rs  emulate.rs  export.rs  extract.rs  import.rs  import_results.rs  list.rs  metrics.rs  mod.rs  regression.rs  remote_setup.rs  remove.rs  report.rs  simulate.rs  simulate_remote.rs  stats.rs  validate.rs  validate_batch.rs
src/config/: mod.rs
src/db/: mod.rs  tests.rs
src/export/: csv.rs  github.rs  html.rs  mod.rs
src/extractor/: mod.rs  section_loader.rs  tests.rs
src/formatting/: diff.rs  hexdiff.rs  mod.rs
src/remote/: cleanup.rs  delta_transfer.rs  diagnostics.rs  executor.rs  hash_verifier.rs  mod.rs  orchestrator.rs  package.rs  pool.rs  retry.rs  setup.rs  transfer.rs  transfer_cache.rs
src/simulator/: assembly_generator.rs  compilation.rs  diagnostics.rs  emulator.rs  execution.rs  mod.rs  random_generator.rs  sandbox.rs  (+2 more)
templates/: report.html
tests/: asm_tests.rs  integration_test.rs  sandbox_test.rs  simulation_test.rs
