[package]
name = "snippex"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snippex"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
object = { version = "0.38", features = ["pe"] }
sha2 = "0.10"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rand = "0.9"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
thiserror = "2.0"
capstone = "0.13"
uuid = { version = "1.19", features = ["v4"] }
tempfile = "3.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
hostname = "0.4"
flate2 = "1.1"
tar = "0.4"
ssh2 = "0.9"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.10"
capstone = "0.13"
