[package]
name = "snippex"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snippex"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
object = { version = "0.38", features = ["pe"] }
sha2 = "0.10"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rand = "0.9"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
thiserror = "2.0"
capstone = "0.14"
uuid = { version = "1.20", features = ["v4"] }
tempfile = "3.24"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
hostname = "0.4"
flate2 = "1.1"
tar = "0.4"
ssh2 = "0.9"
openssl = { version = "0.10", features = ["vendored"] }
ctrlc = "3.4"
csv = "1.3"
rayon = "1.10"
indicatif = "0.18"
console = "0.16"
askama = "0.12"
octocrab = { version = "0.49", features = ["default"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3.24"
capstone = "0.14"
